Added logic for when there is no real time data

--- a/test.html
+++ b/test.html
@@ -40,14 +40,17 @@
             <div class="clearfix" id="info-wrapper">
                 <div class="float-left" id="stop-name">
                     <h3>Stop Name</h3>
-                    <p>
-                        <span class="font-weight-bold" id="stop-1-route-id"></span> -
+                    <p id="stop-1">
+						<span class="font-weight-bold" id="stop-1-stop-name">
+							Washington Blvd + Ohio St
+						</span>: Route
+                        <span id="stop-1-route-id"></span> - Heading
                         <span id="stop-1-route-dir"></span>
                     </p>
                 </div>
                 <div class="float-right" id="minutes-away">
                     <h3>Minutes Away</h3>
-                    <p>
+                    <p id="minues-away-1">
                         Approx. <span id="stop-1-time"></span> minutes
                     </p>
                 </div>
