Changed bus icon and updated the page layout

--- a/test.html
+++ b/test.html
@@ -63,19 +63,16 @@
                 <span id="last_refresh">Never</span>
                 (automatically refreshes approximately every 20 sec)
             </p>
-            <div class="clearfix" id="info-wrapper">
-                <div class="float-left" id="stop-name">
-                    <h3>Stop Name</h3>
-                    <div id="stop-route-data">
-                    </div>
-                </div>
-                <div class="float-right" id="minutes-away">
-                    <h3>Minutes Away</h3>
-                    <div id="stop-time">
-                    </div>
-                </div>
-            </div>
-
+			<div class="card" style="width: 100%;">
+			  <div class="card-body">
+				<h5 class="card-title">Washington Blvd + Ohio St</h5>
+				<h6 class="card-subtitle mb-2 text-muted">Route 2A heading West to Dunn Loring Station</h6>
+				<ul class="list-group list-group-flush" id="stop-route-data">
+				</ul>
+			  </div>
+			</div>
+			
+			<br>
             <div class="float-none" id="map-wrapper">
                 <h3>Map</h3>
                 <p class="text-muted">
