Removed ART and added the train stations

--- a/index.html
+++ b/index.html
@@ -95,31 +95,10 @@
 					</div>
 					<div class="card-footer">
 						<small class="text-muted">
-							Bus Stop # 6000915 is a WMATA route.
+							Bus Stop # 6000915 is operated by WMATA.
 						</small>
 					</div>
 				</div>
-				<div class="card" >
-					<div class="card-body">
-					<div class="float-right">
-						<img src="./ART_Logo.png" alt="ART Logo" style="height: 3rem">
-					</div>
-						<h5 class="card-title">Washington Blvd + Ohio St</h5>
-						<h6 class="card-subtitle mb-2 text-muted">Route 53W heading West to East Falls Church</h6>
-						<ul class="list-group list-group-flush" id="stop-route-data-2">
-						<li class='list-group-item'>No data currently :(</li>
-						</ul>
-					</div>
-					<div class="card-footer">
-						<small class="text-muted">
-							Bus Stop # 15039 is a ART route.
-						</small>
-					</div>
-				</div>
-			</div>
-
-			<br>
-			<div class="card-deck">
 				<div class="card" >
 					<div class="card-body">
 					<div class="float-right">
@@ -133,7 +112,28 @@
 					</div>
 					<div class="card-footer">
 						<small class="text-muted">
-							Bus Stop # 6000912 is a WMATA route.
+							Bus Stop # 6000912 is operated by WMATA.
+						</small>
+					</div>
+				</div>
+			</div>
+
+			<br>
+			<div class="card-deck">
+				<div class="card" >
+					<div class="card-body">
+					<div class="float-right">
+						<img src="./Metro_Logo.png" alt="WMATA Logo" style="height: 3rem">
+					</div>
+						<h5 class="card-title">Ballston Station + Bus Bay D</h5>
+						<h6 class="card-subtitle mb-2 text-muted">Route 2A heading West to Dunn Loring Station</h6>
+						<ul class="list-group list-group-flush" id="stop-route-data-3">
+						<li class='list-group-item'>No data currently :(</li>
+						</ul>
+					</div>
+					<div class="card-footer">
+						<small class="text-muted">
+							Bus Stop # 6000923 is operated by WMATA.
 						</small>
 					</div>
 				</div>
@@ -142,15 +142,53 @@
 					<div class="float-right">
 						<img src="./Metro_Logo.png" alt="WMATA Logo" style="height: 3rem">
 					</div>
-						<h5 class="card-title">East Fall Church + Bus Bay D</h5>
-						<h6 class="card-subtitle mb-2 text-muted">Route 2A heading West to Dunn Loring Station</h6>
+						<h5 class="card-title">East Fall Church Station + Bus Bay D</h5>
+						<h6 class="card-subtitle mb-2 text-muted">Route 2A heading East to Ballson</h6>
 						<ul class="list-group list-group-flush" id="stop-route-data-4">
 						<li class='list-group-item'>No data currently :(</li>
 						</ul>
 					</div>
 					<div class="card-footer">
 						<small class="text-muted">
-							Bus Stop # 6000822 is a WMATA route.
+							Bus Stop # 6000822 is operated by WMATA.
+						</small>
+					</div>
+				</div>
+			</div>
+			
+			<br>
+			<div class="card-deck">
+				<div class="card" >
+					<div class="card-body">
+					<div class="float-right">
+						<img src="./Metro_Logo.png" alt="WMATA Logo" style="height: 3rem">
+					</div>
+						<h5 class="card-title">Greensboro Station</h5>
+						<h6 class="card-subtitle mb-2 text-muted">Next arriving trains</h6>
+						<ul class="list-group list-group-flush" id="stop-route-data-5">
+						<li class='list-group-item'>No data currently :(</li>
+						</ul>
+					</div>
+					<div class="card-footer">
+						<small class="text-muted">
+							Greensboro Station is operated by WMATA.
+						</small>
+					</div>
+				</div>
+				<div class="card" >
+					<div class="card-body">
+					<div class="float-right">
+						<img src="./Metro_Logo.png" alt="WMATA Logo" style="height: 3rem">
+					</div>
+						<h5 class="card-title">Silver Spring Station</h5>
+						<h6 class="card-subtitle mb-2 text-muted">Next arriving trains</h6>
+						<ul class="list-group list-group-flush" id="stop-route-data-6">
+						<li class='list-group-item'>No data currently :(</li>
+						</ul>
+					</div>
+					<div class="card-footer">
+						<small class="text-muted">
+							Silver Spring Station is operated by WMATA.
 						</small>
 					</div>
 				</div>
